[package]
name = "juniperup"
version = "0.1.0"
authors = ["Dan Bruder <dan@debassociates.com>"]

[dependencies]
serde = { version = "1.0.2" }
serde_json = { version = "1.0.2" }
juniper_iron = "0.1.0"
urlencoded = { version = "0.5.0" }
iron = "0.5.1"
iron-test = "^0.5.0"
router = "^0.5.0"
mount = "^0.3.0"
logger = "^0.3.0"

[dependencies.juniper]
version = "0.9.0"
features = ["expose-test-schema", "serde_json"]
